--- a/assignmentMathImaging/report/q1_report/q1.html
+++ b/assignmentMathImaging/report/q1_report/q1.html
@@ -121,7 +121,7 @@ takes much more time to compute. From the tic toc values, we can see that
 lower resolution takes around 0.4 seconds of computation time whereas the
 high resolution radon transform takes aroung 8.5 seconds. (The times are
 reported based on the runs on our PC). <br>
-It also means more measurements in
+Smaller values of delta t and delta theta also means more measurements in
 the real world scenario which would mean more X-Ray exposure for
 patients. <br>
 So, there is a tradeoff here. Higher values of delta theta and
@@ -206,7 +206,7 @@ imagesc(highres_radon);colormap(jet);title('RT with delta t = delta theta = delt
 % lower resolution takes around 0.4 seconds of computation time whereas the
 % high resolution radon transform takes aroung 8.5 seconds. (The times are 
 % reported based on the runs on our PC). <br>
-% It also means more measurements in
+% Smaller values of delta t and delta theta also means more measurements in
 % the real world scenario which would mean more X-Ray exposure for
 % patients. <br> 
 % So, there is a tradeoff here. Higher values of delta theta and
